--- a/src/Views/TextDiffView.axaml
+++ b/src/Views/TextDiffView.axaml
@@ -26,10 +26,10 @@
                                          DeletedHighlightBrush="{DynamicResource Brush.Diff.DeletedHighlight}"
                                          IndicatorForeground="{DynamicResource Brush.FG2}"
                                          FontFamily="{DynamicResource Fonts.Monospace}"
-                                         FontSize="{Binding Source={x:Static vm:Preference.Instance}, Path=EditorFontSize}"
-                                         UseSyntaxHighlighting="{Binding Source={x:Static vm:Preference.Instance}, Path=UseSyntaxHighlighting}"
-                                         WordWrap="{Binding Source={x:Static vm:Preference.Instance}, Path=EnableDiffViewWordWrap}"
-                                         ShowHiddenSymbols="{Binding Source={x:Static vm:Preference.Instance}, Path=ShowHiddenSymbolsInDiffView}"
+                                         FontSize="{Binding Source={x:Static vm:Preferences.Instance}, Path=EditorFontSize}"
+                                         UseSyntaxHighlighting="{Binding Source={x:Static vm:Preferences.Instance}, Path=UseSyntaxHighlighting}"
+                                         WordWrap="{Binding Source={x:Static vm:Preferences.Instance}, Path=EnableDiffViewWordWrap}"
+                                         ShowHiddenSymbols="{Binding Source={x:Static vm:Preferences.Instance}, Path=ShowHiddenSymbolsInDiffView}"
                                          EnableChunkSelection="{Binding #ThisControl.EnableChunkSelection}"
                                          SelectedChunk="{Binding #ThisControl.SelectedChunk, Mode=TwoWay}"
                                          BlockNavigation="{Binding #ThisControl.BlockNavigation, Mode=TwoWay}"/>
@@ -58,10 +58,10 @@
                                            DeletedHighlightBrush="{DynamicResource Brush.Diff.DeletedHighlight}"
                                            IndicatorForeground="{DynamicResource Brush.FG2}"
                                            FontFamily="{DynamicResource Fonts.Monospace}"
-                                           FontSize="{Binding Source={x:Static vm:Preference.Instance}, Path=EditorFontSize}"
-                                           UseSyntaxHighlighting="{Binding Source={x:Static vm:Preference.Instance}, Path=UseSyntaxHighlighting}"
+                                           FontSize="{Binding Source={x:Static vm:Preferences.Instance}, Path=EditorFontSize}"
+                                           UseSyntaxHighlighting="{Binding Source={x:Static vm:Preferences.Instance}, Path=UseSyntaxHighlighting}"
                                            WordWrap="False"
-                                           ShowHiddenSymbols="{Binding Source={x:Static vm:Preference.Instance}, Path=ShowHiddenSymbolsInDiffView}"
+                                           ShowHiddenSymbols="{Binding Source={x:Static vm:Preferences.Instance}, Path=ShowHiddenSymbolsInDiffView}"
                                            EnableChunkSelection="{Binding #ThisControl.EnableChunkSelection}"
                                            SelectedChunk="{Binding #ThisControl.SelectedChunk, Mode=TwoWay}"
                                            BlockNavigation="{Binding #ThisControl.BlockNavigation, Mode=TwoWay}"/>
@@ -80,10 +80,10 @@
                                            DeletedHighlightBrush="{DynamicResource Brush.Diff.DeletedHighlight}"
                                            IndicatorForeground="{DynamicResource Brush.FG2}"
                                            FontFamily="{DynamicResource Fonts.Monospace}"
-                                           FontSize="{Binding Source={x:Static vm:Preference.Instance}, Path=EditorFontSize}"
-                                           UseSyntaxHighlighting="{Binding Source={x:Static vm:Preference.Instance}, Path=UseSyntaxHighlighting}"
+                                           FontSize="{Binding Source={x:Static vm:Preferences.Instance}, Path=EditorFontSize}"
+                                           UseSyntaxHighlighting="{Binding Source={x:Static vm:Preferences.Instance}, Path=UseSyntaxHighlighting}"
                                            WordWrap="False"
-                                           ShowHiddenSymbols="{Binding Source={x:Static vm:Preference.Instance}, Path=ShowHiddenSymbolsInDiffView}"
+                                           ShowHiddenSymbols="{Binding Source={x:Static vm:Preferences.Instance}, Path=ShowHiddenSymbolsInDiffView}"
                                            EnableChunkSelection="{Binding #ThisControl.EnableChunkSelection}"
                                            SelectedChunk="{Binding #ThisControl.SelectedChunk, Mode=TwoWay}"
                                            BlockNavigation="{Binding #ThisControl.BlockNavigation, Mode=TwoWay}"/>
