--- a/src/Views/RevisionCompare.axaml
+++ b/src/Views/RevisionCompare.axaml
@@ -91,12 +91,12 @@
           <v:ChangeViewModeSwitcher Grid.Column="1"
                                     Width="14" Height="14"
                                     HorizontalAlignment="Right"
-                                    ViewMode="{Binding Source={x:Static vm:Preference.Instance}, Path=CommitChangeViewMode, Mode=TwoWay}"/>
+                                    ViewMode="{Binding Source={x:Static vm:Preferences.Instance}, Path=CommitChangeViewMode, Mode=TwoWay}"/>
         </Grid>
 
         <!-- Changes -->
         <Border Grid.Row="1" Margin="0,4,0,0" BorderBrush="{DynamicResource Brush.Border2}" BorderThickness="1" Background="{DynamicResource Brush.Contents}">
-          <v:ChangeCollectionView ViewMode="{Binding Source={x:Static vm:Preference.Instance}, Path=CommitChangeViewMode}"
+          <v:ChangeCollectionView ViewMode="{Binding Source={x:Static vm:Preferences.Instance}, Path=CommitChangeViewMode}"
                                   Changes="{Binding VisibleChanges}"
                                   SelectedChanges="{Binding SelectedChanges, Mode=TwoWay}"
                                   ContextRequested="OnChangeContextRequested"/>
